<resources>
    <string name="app_name">Weathraw</string>
    <string name="current_weather">Current weather</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="weather_icon">Weather icon</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="request_timed_out">Request timed out</string>
    <string name="refreshing_weather_data">Refreshing weather data…</string>
    <string name="_24_hour_forecast">24 hour forecast</string>
    <string name="_4_day_forecast">4 day forecast</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_add_city">Add city</string>
    <string name="change_city">Change city</string>
    <string name="choose_city">Choose city</string>
    <string name="cancel">Cancel</string>
    <string name="add_more">Add more</string>
    <string name="remove_item">Remove item from list</string>
    <string name="updated">Updated:</string>
    <string name="last_update">Last update:</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <string name="widget_settings">Widget settings</string>
    <string name="city">City</string>
    <string name="auto_refresh">Widget auto refresh</string>
    <string name="notification_settings">Notification settings</string>
    <string name="enable_notification">Enable daily notification</string>
    <string name="notification_explanation">Notification about current weather will be shown every day between 10h and 12h if there is an internet connection available.</string>
    <string name="settings">Settings</string>

    <string name="day_short_monday">Mon</string>
    <string name="day_short_tuesday">Tue</string>
    <string name="day_short_wednesday">Wed</string>
    <string name="day_short_thursday">Thu</string>
    <string name="day_short_friday">Fri</string>
    <string name="day_short_saturday">Sat</string>
    <string name="day_short_sunday">Sun</string>
    <string name="notification_time">Notification time</string>
    <string name="notification_test">Notification test</string>
    <string name="about">About</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="about_application">This application has been created as student project. Idea for creating this application was to fulfill the needs of creator himself for a weather application with some advance features.</string>
    <string name="about_api">Application is using <a href="https://openweathermap.org/">OpenWeatherMap</a> API for fetching images and data. Currently, application is using free API pricing plan which comes with some limitations in server up-time and limited api calls per minute.</string>
    <string name="copyright">&#169; All rights reserved</string>

</resources>
